--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n1Y-by-cQR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n1Y-by-cQR">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -769,7 +769,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rKZ-Cf-yGq">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SRL-WQ-xqY" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="725.66666666666663"/>
@@ -2197,11 +2197,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="6aG-k9-JXU">
-                                <rect key="frame" x="20" y="98" width="384" height="53.666666666666657"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="6aG-k9-JXU">
+                                <rect key="frame" x="20" y="98" width="384" height="46"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="m86-Em-bXp" userLabel="logo">
-                                        <rect key="frame" x="0.0" y="5.3333333333333286" width="38.333333333333336" height="43"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="46" height="46"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                 <integer key="value" value="10"/>
@@ -2209,20 +2209,21 @@
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Yf4-y2-3zC">
-                                        <rect key="frame" x="63.333333333333343" y="26.666666666666671" width="320.66666666666663" height="0.33333333333333215"/>
+                                        <rect key="frame" x="66" y="23" width="318" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" red="1" green="0.62352941176470589" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Yf4-y2-3zC" firstAttribute="leading" secondItem="6aG-k9-JXU" secondAttribute="leading" constant="63.333333333333343" id="0V4-4w-feS"/>
-                                    <constraint firstItem="m86-Em-bXp" firstAttribute="top" secondItem="6aG-k9-JXU" secondAttribute="top" constant="5.3333333333333286" id="Ydv-G5-1Eo"/>
-                                    <constraint firstAttribute="bottom" secondItem="Yf4-y2-3zC" secondAttribute="bottom" constant="26.666666666666657" id="Z5h-ja-b3T"/>
+                                    <constraint firstItem="m86-Em-bXp" firstAttribute="centerY" secondItem="6aG-k9-JXU" secondAttribute="centerY" id="5Tc-Gi-SR4"/>
+                                    <constraint firstItem="Yf4-y2-3zC" firstAttribute="centerY" secondItem="6aG-k9-JXU" secondAttribute="centerY" id="Iue-fD-puE"/>
+                                    <constraint firstItem="m86-Em-bXp" firstAttribute="width" secondItem="6aG-k9-JXU" secondAttribute="height" multiplier="1:1" id="XJc-ZD-eON"/>
+                                    <constraint firstItem="m86-Em-bXp" firstAttribute="width" secondItem="6aG-k9-JXU" secondAttribute="width" multiplier="0.12" id="Xlt-5i-vn2"/>
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lq5-Wk-g3R">
-                                <rect key="frame" x="20" y="191.66666666666669" width="374" height="537.66666666666652"/>
+                                <rect key="frame" x="20" y="184" width="374" height="545.33333333333337"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CSL-Du-TfN" userLabel="My Orders">
                                         <rect key="frame" x="10" y="20" width="354" height="70"/>
@@ -2273,7 +2274,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wuY-CL-jCG" userLabel="My Reviews">
-                                        <rect key="frame" x="10" y="100.00000000000003" width="354" height="70"/>
+                                        <rect key="frame" x="10" y="100" width="354" height="70"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="my_reviews_icon" translatesAutoresizingMaskIntoConstraints="NO" id="BCJ-8E-Wa0">
                                                 <rect key="frame" x="10" y="7" width="42.333333333333336" height="56"/>
@@ -2288,7 +2289,7 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Reviews" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hei-XB-0TL">
-                                                <rect key="frame" x="62.333333333333329" y="24.666666666666629" width="239.33333333333337" height="20.666666666666671"/>
+                                                <rect key="frame" x="62.333333333333329" y="24.666666666666686" width="239.33333333333337" height="20.666666666666671"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -2321,7 +2322,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nUY-aN-QU9" userLabel="My Messages">
-                                        <rect key="frame" x="10" y="180.00000000000003" width="354" height="69.666666666666657"/>
+                                        <rect key="frame" x="10" y="180" width="354" height="69.666666666666686"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="message_icon" translatesAutoresizingMaskIntoConstraints="NO" id="6nc-kV-SJC">
                                                 <rect key="frame" x="10" y="6.9999999999999964" width="42.333333333333336" height="55.666666666666657"/>
@@ -2336,7 +2337,7 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Messages" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dys-W3-VP6">
-                                                <rect key="frame" x="62.333333333333329" y="24.666666666666629" width="104.99999999999999" height="20.333333333333329"/>
+                                                <rect key="frame" x="62.333333333333329" y="24.666666666666686" width="104.99999999999999" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -2367,7 +2368,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gPD-f7-YsA" userLabel="Notification">
-                                        <rect key="frame" x="10" y="259.66666666666663" width="354" height="70"/>
+                                        <rect key="frame" x="10" y="259.66666666666669" width="354" height="70"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notification_icon" translatesAutoresizingMaskIntoConstraints="NO" id="huF-ni-fT1">
                                                 <rect key="frame" x="10" y="7" width="42.333333333333336" height="56"/>
@@ -2414,7 +2415,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qyr-9R-sAW" userLabel="My Account">
-                                        <rect key="frame" x="10" y="339.66666666666674" width="354" height="70"/>
+                                        <rect key="frame" x="10" y="339.66666666666663" width="354" height="70"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settings_icon" translatesAutoresizingMaskIntoConstraints="NO" id="PM7-D5-5tO">
                                                 <rect key="frame" x="10" y="7" width="42.333333333333336" height="56"/>
@@ -2429,7 +2430,7 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Account" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="65r-11-feb">
-                                                <rect key="frame" x="62.333333333333321" y="24.666666666666629" width="90.666666666666686" height="20.666666666666671"/>
+                                                <rect key="frame" x="62.333333333333321" y="24.666666666666742" width="90.666666666666686" height="20.666666666666671"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -2464,28 +2465,28 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IPb-qT-rEn" userLabel="Help">
-                                        <rect key="frame" x="10" y="419.66666666666674" width="354" height="69.666666666666686"/>
+                                        <rect key="frame" x="10" y="419.66666666666663" width="354" height="77.333333333333314"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="help_icon" translatesAutoresizingMaskIntoConstraints="NO" id="a0T-TT-dX5">
-                                                <rect key="frame" x="10" y="6.9999999999999964" width="42.333333333333336" height="55.666666666666657"/>
+                                                <rect key="frame" x="10" y="7.0000000000000036" width="42.333333333333336" height="63.333333333333343"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="42.333333333333336" id="DDi-uv-jGM"/>
                                                 </constraints>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="531-3j-U8E">
-                                                <rect key="frame" x="311.66666666666669" y="6.9999999999999964" width="42.333333333333314" height="55.666666666666657"/>
+                                                <rect key="frame" x="311.66666666666669" y="7.0000000000000036" width="42.333333333333314" height="63.333333333333343"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="42.333333333333314" id="RqT-wO-e0D"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Help" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqM-Dt-4BR">
-                                                <rect key="frame" x="62.333333333333329" y="24.666666666666629" width="35.333333333333329" height="20.333333333333329"/>
+                                                <rect key="frame" x="62.333333333333329" y="24.666666666666742" width="35.333333333333329" height="28"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5m-dN-0Qy">
-                                                <rect key="frame" x="0.0" y="0.0" width="354" height="69.666666666666671"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="354" height="77.333333333333329"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -3042,7 +3043,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="N4E-qe-Wyq"/>
         <segue reference="NHr-zy-FFi"/>
-        <segue reference="ybP-Ln-r90"/>
+        <segue reference="Jgp-et-rMS"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
     <resources>
@@ -3070,8 +3071,8 @@
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="right_arrow" width="64" height="64"/>
         <image name="settings_icon" width="50" height="50"/>
-        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <image name="xmark.circle" width="13" height="13"/>
+        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
