--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Subcategory/SubCategoryCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Subcategory/SubCategoryCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,39 +18,41 @@
                 <rect key="frame" x="0.0" y="0.0" width="235" height="109"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OcP-Cb-wey">
-                        <rect key="frame" x="0.0" y="1" width="100" height="108"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AlC-lN-fp5">
+                        <rect key="frame" x="10" y="10" width="215" height="89"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OcP-Cb-wey">
+                                <rect key="frame" x="10" y="9" width="43" height="71"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejI-Ha-0ZF">
+                                <rect key="frame" x="73" y="44.5" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" red="1" green="0.62352941176470589" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="t3t-Kf-31j"/>
+                            <constraint firstItem="OcP-Cb-wey" firstAttribute="width" secondItem="AlC-lN-fp5" secondAttribute="width" multiplier="0.2" id="0Z6-v0-hPw"/>
+                            <constraint firstItem="OcP-Cb-wey" firstAttribute="leading" secondItem="AlC-lN-fp5" secondAttribute="leading" constant="10" id="3IY-yk-NuE"/>
+                            <constraint firstItem="ejI-Ha-0ZF" firstAttribute="centerY" secondItem="AlC-lN-fp5" secondAttribute="centerY" id="C9s-Dn-jho"/>
+                            <constraint firstItem="OcP-Cb-wey" firstAttribute="centerY" secondItem="AlC-lN-fp5" secondAttribute="centerY" id="HoP-HE-BaT"/>
+                            <constraint firstItem="OcP-Cb-wey" firstAttribute="height" secondItem="AlC-lN-fp5" secondAttribute="height" multiplier="0.8" id="SXP-Zc-rUN"/>
+                            <constraint firstItem="ejI-Ha-0ZF" firstAttribute="leading" secondItem="OcP-Cb-wey" secondAttribute="trailing" constant="20" id="aaf-2S-JqV"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejI-Ha-0ZF">
-                        <rect key="frame" x="115" y="16" width="113" height="79"/>
-                        <attributedString key="attributedText">
-                            <fragment content="         Label">
-                                <attributes>
-                                    <color key="NSColor" red="0.035541415214538574" green="0.020143374800682068" blue="0.059962466359138489" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <font key="NSFont" metaFont="system" size="24"/>
-                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                </attributes>
-                            </fragment>
-                        </attributedString>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="ejI-Ha-0ZF" secondAttribute="bottom" id="EBV-cK-IaB"/>
-                    <constraint firstItem="OcP-Cb-wey" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="I72-gy-XvK"/>
-                    <constraint firstAttribute="trailing" secondItem="ejI-Ha-0ZF" secondAttribute="trailing" id="NvG-ef-j7s"/>
-                    <constraint firstItem="OcP-Cb-wey" firstAttribute="centerY" secondItem="ejI-Ha-0ZF" secondAttribute="centerY" id="Vro-Zj-3o6"/>
-                    <constraint firstItem="OcP-Cb-wey" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="gxw-DS-cOc"/>
-                    <constraint firstItem="ejI-Ha-0ZF" firstAttribute="leading" secondItem="OcP-Cb-wey" secondAttribute="trailing" id="hPE-mU-Bdg"/>
-                    <constraint firstItem="ejI-Ha-0ZF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="yQi-w9-kd2"/>
-                    <constraint firstItem="OcP-Cb-wey" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="yx6-fw-Eee"/>
+                    <constraint firstItem="AlC-lN-fp5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Ibx-Rv-VPK"/>
+                    <constraint firstItem="AlC-lN-fp5" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Nmg-q4-YWV"/>
+                    <constraint firstAttribute="bottom" secondItem="AlC-lN-fp5" secondAttribute="bottom" constant="10" id="WRv-HE-zec"/>
+                    <constraint firstItem="AlC-lN-fp5" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="YHs-dJ-HBH"/>
+                    <constraint firstAttribute="trailing" secondItem="AlC-lN-fp5" secondAttribute="trailing" constant="10" id="nqi-04-Qdz"/>
+                    <constraint firstItem="AlC-lN-fp5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="uUM-K2-2TL"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <color key="backgroundColor" red="0.96505492930000003" green="0.63631647830000004" blue="0.14973559980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="nameLabel" destination="ejI-Ha-0ZF" id="vZo-Ik-0UB"/>
                 <outlet property="subCategoryImage" destination="OcP-Cb-wey" id="8cd-KS-fYd"/>
@@ -57,4 +60,9 @@
             <point key="canvasLocation" x="6.5217391304347831" y="248.77232142857142"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
